# sf-test-01

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  test.py  tox.ini  笔记.md
.github/: ISSUE_TEMPLATE.md
data/: h_carol.csv
data/alice/: alice_x0
data/bob/: bob_x0  v_bob.csv
docs/: Makefile  SPU基础.ipynb  conf.py  index.rst  installation.rst  make.bat  usage.rst  问题.txt
local/: spu四则运算.py
mysql/: 1.test.py  2.test.py  read_mysql.py
scr/: cli.py
scr/mpc/: 02~03.alice四则运算和比较大小.py  test.py  txt.txt
scr/mysql/: 4.test.py  read_mysql.py  test_psi_df.ipynb  test_read_mysql.ipynb
scr/preprocessing/: README.md  __init__.py  binning.py  encoder.py  exploration.py  feature_selection.py  normalization.py  preprocess.py  sample.py
scr/psi/: __init__.py  pir.py
scr/utils/: __init__.py  cli.py  config.py  path.py  tools.py  transfer.py
sf/: __init__.py  cli.py
sf/mpc/: 02~03.alice四则运算和比较大小.py
sf/mysql/: 2.test.py  3.test.py  psi.py
sf/utils/: __init__.py  code.py  path.py  tools.py
test/: SPU简单使用.ipynb  Transforming_SingleModel_to_SecretFlow_Federated_Learning.ipynb  alice_spu copy.py  alice_spu.ipynb  alice_spu.py  alice横向联邦学习.py  nn_with_spu.ipynb
tests/: MPC算法开发实践.ipynb  SPU数据读取和保存.py  __init__.py  alice纵向联邦学习.py  test.ipynb  test.py  test_sf.py  数据准备.ipynb  横向联邦学习.ipynb
tests/0.0.0 数据预处理相关/: 00.创建自定义数据测试.ipynb  01.联邦学习数据读取.ipynb  03.(V,H,M)Dataframe数据预处理.ipynb  03.VDataframe数据预处理.ipynb  04.特征工程.ipynb  05.WOE编码与IV值.ipynb  (+1 more)
utils/: __init__.py
服务器文件/: 命令.txt
相关功能/: 数据分析全流程.ipynb  深度学习DNN.ipynb
(+73 files in other folders)
